// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Avatar Basic Usage 1`] = `
Object {
  "code": <span
    className="drac-avatar drac-bg-green-transparent drac-text-green drac-avatar"
    src="https://pbs.twimg.com/profile_images/1217874327137185794/rFqSV_h0_400x400.jpg"
    style={
      Object {
        "backgroundImage": "url('https://pbs.twimg.com/profile_images/1217874327137185794/rFqSV_h0_400x400.jpg')",
      }
    }
    title="Netto Farah"
  />,
  "docs": "",
  "title": "basic usage",
}
`;

exports[`Site: Avatar Custom colors 1`] = `
Object {
  "code": Array [
    <span
      className="drac-avatar drac-bg-green-transparent drac-text-green drac-avatar"
      color="black"
      style={Object {}}
      title="Netto Farah"
    >
      <span
        className="drac-text drac-text drac-text drac-text-white"
        color="white"
      >
        N
        F
      </span>
    </span>,
    <span
      className="drac-avatar drac-bg-green-transparent drac-text-green drac-avatar"
      color="cyan"
      style={Object {}}
      title="Netto Farah"
    >
      <span
        className="drac-text drac-text drac-text drac-text-white"
        color="white"
      >
        N
        F
      </span>
    </span>,
  ],
  "docs": "Avatars accept colors, like in the example below...",
  "title": "Custom colors",
}
`;

exports[`Site: Avatar Custom variants 1`] = `
Object {
  "code": Array [
    <span
      className="drac-avatar drac-bg-green-transparent drac-text-green drac-avatar"
      style={Object {}}
      title="Netto Farah"
      variant="normal"
    >
      <span
        className="drac-text drac-text drac-text drac-text-white"
        color="white"
      >
        N
        F
      </span>
    </span>,
    <span
      className="drac-avatar drac-bg-green-transparent drac-text-green drac-avatar-subtle"
      style={Object {}}
      title="Zeno Rocha"
      variant="subtle"
    >
      <span
        className="drac-text drac-text drac-text drac-text-white"
        color="white"
      >
        Z
        R
      </span>
    </span>,
  ],
  "docs": "Avatars accept multiple variants, like in the example below...",
  "title": "Custom variants",
}
`;

exports[`Site: Avatar border: large 1`] = `
Object {
  "code": <span
    borderVariant="large"
    className="drac-avatar drac-bg-green-transparent drac-text-green drac-avatar drac-avatar-lg-stroke"
    style={Object {}}
    title="Netto Farah"
  >
    <span
      className="drac-text drac-text drac-text drac-text-white"
      color="white"
    >
      N
      F
    </span>
  </span>,
  "docs": "",
  "title": "border: large",
}
`;

exports[`Site: Avatar border: none 1`] = `
Object {
  "code": <span
    borderVariant="none"
    className="drac-avatar drac-bg-green-transparent drac-text-green drac-avatar drac-avatar-no-border"
    style={Object {}}
    title="Netto Farah"
  >
    <span
      className="drac-text drac-text drac-text drac-text-white"
      color="white"
    >
      N
      F
    </span>
  </span>,
  "docs": "",
  "title": "border: none",
}
`;

exports[`Site: Avatar border: normal 1`] = `
Object {
  "code": <span
    borderVariant="normal"
    className="drac-avatar drac-bg-green-transparent drac-text-green drac-avatar"
    style={Object {}}
    title="Netto Farah"
  >
    <span
      className="drac-text drac-text drac-text drac-text-white"
      color="white"
    >
      N
      F
    </span>
  </span>,
  "docs": "",
  "title": "border: normal",
}
`;
